--- a/app/partials/client.html
+++ b/app/partials/client.html
@@ -190,7 +190,7 @@
 
     </div>
     <!--modal add client-->
-    <div class="modal inmodal fade" id="add-client" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="add-client" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -807,7 +807,7 @@
         </div>
     </div> 
 <!--success modal-->
-    <div class="modal inmodal fade" id="success" tabindex="-1" role="dialog"  aria-hidden="true" style="top:150px;">
+    <div class="modal inmodal fade" id="success" tabindex="-1" role="dialog"  aria-hidden="false" data-backdrop="static" style="top:150px;">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -822,7 +822,7 @@
         </div>
     </div> 
 <!--failure modal-->
-    <div class="modal inmodal fade" id="failure" tabindex="-1" role="dialog"  aria-hidden="true" style="top:150px;">
+    <div class="modal inmodal fade" id="failure" tabindex="-1" role="dialog"  aria-hidden="false" data-backdrop="static" style="top:150px;">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -837,7 +837,7 @@
         </div>
     </div> 
 <!--warning modal-->
-    <div class="modal inmodal fade" id="warning" tabindex="-1" role="dialog"  aria-hidden="true" style="top:150px;">
+    <div class="modal inmodal fade" id="warning" tabindex="-1" role="dialog"  aria-hidden="false" data-backdrop="static" style="top:150px;">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -852,7 +852,7 @@
         </div>
     </div> 
  <!--modal delete-->
-    <div class="modal inmodal fade" id="delete" tabindex="-1" role="dialog"  aria-hidden="true" style="top:150px;">
+    <div class="modal inmodal fade" id="delete" tabindex="-1" role="dialog"  aria-hidden="false" data-backdrop="static" style="top:150px;">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -869,7 +869,7 @@
             </div>
         </div>
     </div> 
-<div class="modal inmodal fade" id="credit-calculator" tabindex="-1" role="dialog"  aria-hidden="true" style="top:150px;">
+<div class="modal inmodal fade" id="credit-calculator" tabindex="-1" role="dialog"  style="top:150px;" aria-hidden="false" data-backdrop="static">
      <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
