--- a/app/partials/clientDashboard.html
+++ b/app/partials/clientDashboard.html
@@ -27,7 +27,7 @@
       </div>
   </div>
   <div class="clear-both"></div>
-   <div class="modal inmodal fade" id="add-project-dash" role="dialog"  aria-hidden="true">
+   <div class="modal inmodal fade" id="add-project-dash" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-m">
             <div class="modal-content">
                 <div class="modal-header">
