--- a/app/partials/clientprojects.html
+++ b/app/partials/clientprojects.html
@@ -225,7 +225,7 @@
  	 </div>
 </diV>
 <!--modal add rate-->
-    <div class="modal inmodal fade" id="add-rate" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="add-rate" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -247,7 +247,7 @@
             </div>
         </div>
     </div>
-     <div class="modal inmodal fade" id="add-estimation" role="dialog"  aria-hidden="true">
+     <div class="modal inmodal fade" id="add-estimation" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -275,7 +275,7 @@
         </div>
     </div>
     <!--modal add member-->
-    <div class="modal inmodal fade" id="add-member" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="add-member" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-md">
             <div class="modal-content">
                 <div class="modal-header">
@@ -347,7 +347,7 @@
             </div>
         </div>
     </div>
-<div class="modal inmodal fade" id="prepare-project" role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="prepare-project" role="dialog"  aria-hidden="false" data-backdrop="static">
     <div class="modal-dialog modal-m">
         <div class="modal-content">
                 <div class="modal-header">
@@ -375,7 +375,7 @@
             </div>
     </div>
 </div>
-<div class="modal inmodal fade" id="admin-add-project" role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="admin-add-project" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-m">
             <div class="modal-content">
                 <div class="modal-header">
