--- a/app/partials/cuser.html
+++ b/app/partials/cuser.html
@@ -161,7 +161,7 @@
         </div>
         <!--end page wrapper-->
       <!--modal add user-->
-    <div class="modal inmodal fade" id="add-user" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="add-user" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -463,7 +463,7 @@
         </div>
     </div>  
  <!--modal change picture-->
-    <div class="modal inmodal fade" id="change-picture" tabindex="-1" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="change-picture" tabindex="-1" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -514,7 +514,7 @@
     </div> 
 
     <!--modal delete-->
-    <div class="modal inmodal fade" id="delete" tabindex="-1" role="dialog"  aria-hidden="true" style="top:150px;">
+    <div class="modal inmodal fade" id="delete" tabindex="-1" role="dialog"  aria-hidden="false" data-backdrop="static" style="top:150px;">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -532,7 +532,7 @@
         </div>
     </div> 
   <!--success modal-->
-    <div class="modal inmodal fade" id="success" tabindex="-1" role="dialog"  aria-hidden="true" style="top:150px;">
+    <div class="modal inmodal fade" id="success" tabindex="-1" role="dialog"  aria-hidden="false" data-backdrop="static" style="top:150px;">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -547,7 +547,7 @@
         </div>
     </div> 
 <!--failure modal-->
-    <div class="modal inmodal fade" id="failure" tabindex="-1" role="dialog"  aria-hidden="true" style="top:150px;">
+    <div class="modal inmodal fade" id="failure" tabindex="-1" role="dialog"  aria-hidden="false" data-backdrop="static" style="top:150px;">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
