--- a/app/partials/invoicedetails.html
+++ b/app/partials/invoicedetails.html
@@ -33,6 +33,7 @@
                                         <div class="row">
                                             <div class="col-md-6 p0">
                                                 <a class="btn btn-default btn-bitbucket btn-m mr5" ng-click="backToInvoices()"><i class="fa fa-angle-left mr5"></i> back to invoices</a>
+                                               <a class="btn btn-default btn-bitbucket btn-m mr5" onclick="window.print()"><i class="fa fa-print mr5"></i> print</a>
                                                 <a class="btn btn-default btn-bitbucket btn-m mr5 btnCopy" href="#/invoice/report/invoice/{{invoice.id}}"><i class="fa fa-search mr5"></i> see report</a>
                                                 <!-- <a class="btn btn-default btn-bitbucket btn-m mr5 btnCopy" data-clipboard-text="{{currentUrl}}"><i class="fa fa-download mr5"></i> download pdf</a> -->
                                                 <!-- <a href="#" class="btn btn-primary btn-sm mr5"><i class="fa fa-arrow-right mr5"></i> pay now!</a> -->
