--- a/app/partials/nav-menu.html
+++ b/app/partials/nav-menu.html
@@ -24,7 +24,7 @@
                     </ul>
                 </nav>
                 <!--modal key account-->
-                <div class="modal inmodal fade" id="key-account" role="dialog"  aria-hidden="true">
+                <div class="modal inmodal fade" id="key-account" role="dialog"  aria-hidden="false" data-backdrop="static">
                     <div class="modal-dialog modal-m">
                         <div class="modal-content">
                             <div class="modal-header">
