--- a/app/partials/partnercommlist.html
+++ b/app/partials/partnercommlist.html
@@ -122,7 +122,7 @@
        <!--end page wrapper-->
 
    </div>
-<div class="modal inmodal fade" id="upload-file" role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="upload-file" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-m">
             <div class="modal-content">
                 <div class="modal-header">
