--- a/app/partials/partners.html
+++ b/app/partials/partners.html
@@ -167,7 +167,7 @@
         </div>
     </div>
 </div>
-<div class="modal inmodal fade" id="add-user"  role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="add-user"  role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -749,7 +749,7 @@
         </div>
 </div>
  <!--modal change picture-->
-    <div class="modal inmodal fade" id="change-picture" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="change-picture" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
