--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -473,7 +473,7 @@
             <!--end footer-->
     </div>
      <!--modal add member-->
-    <div class="modal inmodal fade" id="add-member" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="add-member" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-md">
             <div class="modal-content">
                 <div class="modal-header">
@@ -546,7 +546,7 @@
         </div>
     </div>
  <!--success modal-->
-    <div class="modal inmodal fade" id="teamsuccess" tabindex="-1" role="dialog"  aria-hidden="true" style="top:150px;">
+    <div class="modal inmodal fade" id="teamsuccess" tabindex="-1" role="dialog"  aria-hidden="false" data-backdrop="static" style="top:150px;">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -561,7 +561,7 @@
         </div>
     </div>
     <!--failure modal-->
-    <div class="modal inmodal fade" id="teamfailure" tabindex="-1" role="dialog"  aria-hidden="true" style="top:150px;">
+    <div class="modal inmodal fade" id="teamfailure" tabindex="-1" role="dialog"  aria-hidden="false" data-backdrop="static" style="top:150px;">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -576,7 +576,7 @@
         </div>
     </div>
 <!--warning modal-->
-    <div class="modal inmodal fade" id="teamwarning" tabindex="100" role="dialog"  aria-hidden="true" style="top:150px;">
+    <div class="modal inmodal fade" id="teamwarning" tabindex="100" role="dialog"  aria-hidden="false" data-backdrop="static" style="top:150px;">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -591,7 +591,7 @@
         </div>
     </div>
     <!--modal project description-->
-    <div class="modal inmodal fade" id="project-description" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="project-description" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-m">
             <div class="modal-content">
                 <div class="modal-header">
@@ -618,7 +618,7 @@
         </div>
     </div>
         <!--modal link jira-->
-    <div class="modal inmodal fade" id="jira_link" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="jira_link" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-m">
             <div class="modal-content">
                 <div class="modal-header">
@@ -659,7 +659,7 @@
         </div>
     </div>
     <!--modal notifications-->
-    <div class="modal inmodal fade" id="notifications" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="notifications" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-m">
             <div class="modal-content">
                 <div class="modal-header">
@@ -687,7 +687,7 @@
             </div>
         </div>
     </div>
-    <div class="modal inmodal fade" id="budgetlimit" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="budgetlimit" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -710,7 +710,7 @@
         </div>
     </div>
      <!--modal add ticket-->
-    <div class="modal inmodal fade" id="add-ticket" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="add-ticket" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-md">
             <div class="modal-content">
                 <div class="modal-header">
@@ -748,7 +748,7 @@
             </div>
         </div>
     </div>
-     <div class="modal inmodal fade" id="bug-info" role="dialog"  aria-hidden="true">
+     <div class="modal inmodal fade" id="bug-info" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -764,7 +764,7 @@
             </div>
         </div>
     </div>
-    <div class="modal inmodal fade" id="reject-ticket" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="reject-ticket" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-md">
             <div class="modal-content">
                 <div class="modal-header">
@@ -785,7 +785,7 @@
             </div>
         </div>
     </div>
-     <div class="modal inmodal fade" id="bug-info" role="dialog"  aria-hidden="true">
+     <div class="modal inmodal fade" id="bug-info" role="dialog" aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -804,7 +804,7 @@
 
     </div>
 </div>
-<div class="modal inmodal fade" id="estimation-details" role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="estimation-details" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -873,7 +873,7 @@
         </div>
     </div>
  <!--modal send to client-->
-    <div class="modal inmodal fade" id="send-to-client" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="send-to-client" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -942,7 +942,7 @@
         </div>
     </div>
 <!--modal send-to-production chrome safari bug-->
-    <div class="modal inmodal fade" id="send-to-production" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="send-to-production" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -1001,7 +1001,7 @@
         </div>
     </div>
  <!--modal deliver ticket-->
-    <div class="modal inmodal fade" id="deliver-ticket" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="deliver-ticket" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -1068,7 +1068,7 @@
         </div>
     </div>
 <!--modal see reject messages-->
-    <div class="modal inmodal fade" id="reject-messages" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="reject-messages" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-m">
             <div class="modal-content">
                 <div class="modal-header">
@@ -1108,7 +1108,7 @@
             </div>
         </div>
     </div>
-    <div class="modal inmodal fade" id="add-bug" role="dialog" aria-hidden="true">
+    <div class="modal inmodal fade" id="add-bug" role="dialog" aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -1137,7 +1137,7 @@
         </div>
 
 </div>
-<div class="modal inmodal fade" id="see-contract" role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="see-contract" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-m">
             <div class="modal-content">
                 <div class="modal-header">
