--- a/app/partials/side-bar.html
+++ b/app/partials/side-bar.html
@@ -331,7 +331,7 @@
             </div>
         </nav>
 
- <div class="modal inmodal fade" id="add-project" role="dialog"  aria-hidden="true">
+ <div class="modal inmodal fade" id="add-project" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-m">
             <div class="modal-content">
                 <div class="modal-header">
@@ -371,7 +371,7 @@
     </div>
 
       <!--modal edit client profile-->
-    <div class="modal inmodal fade" id="edit-profile-client" role="dialog" aria-hidden="true" style="overflow-y: scroll;">
+    <div class="modal inmodal fade" id="edit-profile-client" role="dialog" aria-hidden="false" data-backdrop="static" style="overflow-y: scroll;">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -959,7 +959,7 @@
         </div>
     </div>
    <!--  modal edit partner -->
-    <div class="modal inmodal fade" id="edit-partner-profile"  role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="edit-partner-profile"  role="dialog" aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -1510,7 +1510,7 @@
         </div>
 </div>
     <!--modal change password-->
-    <div class="modal inmodal fade" id="change-password" role="dialog"  aria-hidden="true" >
+    <div class="modal inmodal fade" id="change-password" role="dialog"  aria-hidden="false" data-backdrop="static" >
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -1555,7 +1555,7 @@
             </div>
         </div>
     </div>
-<div class="modal inmodal fade" id="jira_form" role="dialog"  aria-hidden="true" >
+<div class="modal inmodal fade" id="jira_form" role="dialog"  aria-hidden="false" data-backdrop="static" >
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
