--- a/app/partials/stories.html
+++ b/app/partials/stories.html
@@ -533,7 +533,7 @@
                 </div>
             </div>
             <!--end footer-->
-<div class="modal inmodal fade" id="add-estimation" role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="add-estimation" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -591,7 +591,7 @@
 </div>
 
 <!--modal see reject messages-->
-    <div class="modal inmodal fade" id="reject-messages" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="reject-messages" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-m">
             <div class="modal-content">
                 <div class="modal-header">
@@ -631,7 +631,7 @@
             </div>
         </div>
     </div>
-<div class="modal inmodal fade" id="add-story" role="dialog" aria-hidden="true">
+<div class="modal inmodal fade" id="add-story" role="dialog" aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -671,7 +671,7 @@
         </div>
 
 </div>
-<div class="modal inmodal fade" id="add-bug" role="dialog" aria-hidden="true">
+<div class="modal inmodal fade" id="add-bug" role="dialog" aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -709,7 +709,7 @@
 </div>
         </div>
         <!--end page wrapper-->
-<div class="modal inmodal fade" id="reject-ticket" role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="reject-ticket" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-md">
             <div class="modal-content">
                 <div class="modal-header">
@@ -730,7 +730,7 @@
             </div>
         </div>
     </div>
-<div class="modal inmodal fade" id="reject-bug" role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="reject-bug" role="dialog" aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-md">
             <div class="modal-content">
                 <div class="modal-header">
@@ -752,7 +752,7 @@
         </div>
     </div>
     <!--modal upload file-->
-<div class="modal inmodal fade" id="upload-file" role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="upload-file" role="dialog" aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-m">
             <div class="modal-content">
                 <div class="modal-header">
@@ -847,7 +847,7 @@
         </div>
 </div>
   <!--modal edit realtime-->
-    <div class="modal inmodal fade" id="edit-realtime" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="edit-realtime" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
