--- a/app/partials/cuserprofile.html
+++ b/app/partials/cuserprofile.html
@@ -302,7 +302,7 @@
             <!--end footer-->
    
         </div>
-  <div class="modal inmodal fade" id="add-user" tabindex="-1" role="dialog"  aria-hidden="true">
+  <div class="modal inmodal fade" id="add-user" tabindex="-1" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -394,7 +394,7 @@
         </div>
     </div>  
  <!--modal change picture-->
-    <div class="modal inmodal fade" id="change-picture" tabindex="-1" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="change-picture" tabindex="-1" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
@@ -445,7 +445,7 @@
     </div> 
 
     <!--modal delete-->
-    <div class="modal inmodal fade" id="delete" tabindex="-1" role="dialog"  aria-hidden="true" style="top:150px;">
+    <div class="modal inmodal fade" id="delete" tabindex="-1" role="dialog" aria-hidden="false" data-backdrop="static" style="top:150px;">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
