--- a/app/partials/team.html
+++ b/app/partials/team.html
@@ -371,7 +371,7 @@
         </div>
 </div>
 <!--Add team member model-->
-<div class="modal inmodal fade" id="add-user"  role="dialog"  aria-hidden="true">
+<div class="modal inmodal fade" id="add-user"  role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -1003,7 +1003,7 @@
         </div>
 </div>
  <!--modal delete-->
-    <div class="modal inmodal fade" id="delete" role="dialog"  aria-hidden="true" style="top:150px;">
+    <div class="modal inmodal fade" id="delete" role="dialog"  aria-hidden="false" data-backdrop="static" style="top:150px;">
         <div class="modal-dialog modal-sm">
             <div class="modal-content">
                 <div class="modal-header">
@@ -1066,7 +1066,7 @@
         </div>
     </div> 
  <!--modal change picture-->
-    <div class="modal inmodal fade" id="change-picture" role="dialog"  aria-hidden="true">
+    <div class="modal inmodal fade" id="change-picture" role="dialog"  aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
