--- a/app/partials/adminInvoice.html
+++ b/app/partials/adminInvoice.html
@@ -46,6 +46,10 @@
                                         </div>
                                         <div class="bill-times">
                                           <div class="bill-estimation">
+                                            <span class="est">RATE</span>
+                                            <span class="esthours">{{unbilled.rate}}</span>
+                                          </div>
+                                          <div class="bill-estimation">
                                             <span class="est">EST</span>
                                             <span class="esthours">{{unbilled.estimation}} h</span>
                                           </div>
@@ -92,6 +96,10 @@
                                           <div class="bill-date">{{unpaid.creation_date}} <i class="fa fa-long-arrow-right ml5"></i></div>
                                         </div>
                                         <div class="bill-times">
+                                          <div class="bill-estimation">
+                                            <span class="est">RATE</span>
+                                            <span class="esthours">{{unpaid.rate}}</span>
+                                          </div>
                                           <div class="bill-realtime">
                                             <span class="rt">BT</span>
                                             <span class="rthours">{{unpaid.billed_time}} h</span>
@@ -139,6 +147,10 @@
                                           <div class="bill-date">{{unpaid.creation_date}} <i class="fa fa-long-arrow-right ml5"></i></div>
                                         </div>
                                         <div class="bill-times">
+                                          <div class="bill-estimation">
+                                            <span class="est">RATE</span>
+                                            <span class="esthours">{{unpaid.rate}} </span>
+                                          </div>
                                           <div class="bill-realtime">
                                             <span class="rt">BT</span>
                                             <span class="rthours">{{unpaid.billed_time}} h</span>
