--- a/app/partials/pdetails.html
+++ b/app/partials/pdetails.html
@@ -247,9 +247,11 @@
                                                         </td>
                                                         <td class="project-status" ng-if="ticket.status==ticketStatus.Accept.status">
                                                             <button type="button" class="btn btn-primary btn-xs fxw-alert-accept-ticket" ng-click="acceptTicket(ticket)" ng-if="!ticket.bugopen"><i class="fa fa-chevron-right" ></i> acccept</button>
+
                                                             <button type="button" class="btn btn-danger btn-xs fxw-alert-reject-ticket" ng-click="openAddBug(ticket)"><i class="fa fa-plus"></i> add bug</button>
                                                             <small ng-if="!ticket.bugopen">please accept &amp; close ticket</small>
                                                             <small ng-if="ticket.bugopen">bugs solving in progress</small>
+                                                            <small ng-if="ticket.remaining">ticket will be closed automatically in {{ticket.remaining}}</small>
                                                         </td>
                                                          <td class="project-status" ng-if="ticket.status==ticketStatus.Done.status && isKeyAccount">
                                                             <span class="label label-default label-nobg" ng-if="ticket.open"><i class="fa fa-check"></i> done / not billed</span>
@@ -346,7 +348,7 @@
                                                         <td class="project-status" ng-if="ticket.status==ticketStatus.Accept.status">
 
                                                            <span class="label label-default label-nobg"><img src="img/ellipsis.gif" width="15" height="15"> in acceptance</span>
-
+                                                           <small ng-if="ticket.remaining">ticket will be closed in {{ticket.remaining}}</small>
                                                         </td>
                                                         <td class="project-status" ng-if="ticket.status==ticketStatus.Done.status && isAdmin">
                                                             <span class="label label-default label-nobg" ng-if="ticket.open"><i class="fa fa-check"></i> done / not billed</span>
@@ -433,7 +435,7 @@
                                                         <td class="project-status" ng-if="ticket.status==ticketStatus.Accept.status">
 
                                                            <span class="label label-default label-nobg"><img src="img/ellipsis.gif" width="15" height="15"> in acceptance</span>
-
+                                                           <small ng-if="ticket.remaining">ticket will be closed automatically in {{ticket.remaining}}</small>
                                                         </td>
 
                                                         <td class="project-status" ng-if="ticket.status==ticketStatus.Done.status">
