--- a/app/partials/stories.html
+++ b/app/partials/stories.html
@@ -777,7 +777,7 @@
         </div>
 </div>
 <!--add realtime model-->
-<div class="modal inmodal fade in" id="add-realtime" role="dialog" aria-hidden="true">
+<div class="modal inmodal fade in" id="add-realtime" role="dialog" aria-hidden="false" data-backdrop="static">
         <div class="modal-dialog modal-md">
             <div class="modal-content">
                 <div class="modal-header">
